# gleam

./: .gitignore  Cargo.toml  Makefile  README.md
compiler-core/: Cargo.toml  askama.toml
compiler-core/main/: lib.rs
compiler-core/main/__analyse/: mod.rs
compiler-core/main/__analyse/analyse/: imports.rs  mod.rs
compiler-core/main/__core/: mod.rs
compiler-core/main/__core/ast/: ast_folder.rs  constant.rs  mod.rs  tests.rs  typed.rs
compiler-core/main/__core/errors/: mod.rs  warning.rs
compiler-core/main/__core/errors/error/: mod.rs
compiler-core/main/__core/type_/: bit_array_options.rs  environment.rs  error.rs  expression.rs  mod.rs  pattern.rs  prelude.rs  tests.rs
compiler-core/main/__core/type_/snapshots/: gleam_core____core__type___tests__const_record_update_all_fields.snap  gleam_core____core__type___tests__const_record_update_field_type_mismatch_error.snap  gleam_core____core__type___tests__const_record_update_fieldless_warning.snap  gleam_core____core__type___tests__const_record_update_non_record.snap  gleam_core____core__type___tests__const_record_update_nonexistent_field.snap  gleam_core____core__type___tests__const_record_update_type_mismatch_error.snap  gleam_core____core__type___tests__const_record_update_unlabelled_fields.snap  gleam_core____core__type___tests__const_record_update_variant_mismatch_error.snap  gleam_core____core__type___tests__const_record_update_variant_without_args.snap  gleam_core____core__type___tests__correct_type_check_for_multiple_mutually_recursive_functions.snap  gleam_core____core__type___tests__function_parameter_errors_do_not_stop_inference.snap  gleam_core____core__type___tests__generic_unlabelled_field_in_updated_const_record_wrong_type.snap  gleam_core____core__type___tests__pipe_with_annonymous_unannotated_functions_wrong_arity1.snap  (+16 more)
compiler-core/main/__format/: mod.rs
compiler-core/main/__format/format/: mod.rs
compiler-core/main/__generate/: codegen.rs  mod.rs
compiler-core/main/__generate/docs/: mod.rs  source_links.rs  tests.rs
compiler-core/main/__generate/erlang/: mod.rs  tests.rs
compiler-core/main/__generate/javascript/: mod.rs  tests.rs
compiler-core/main/__parse/parse/: mod.rs
compiler-core/main/language_server/: code_action.rs  compiler.rs  completer.rs  edits.rs  engine.rs  mod.rs  reference.rs  rename.rs  router.rs  tests.rs
compiler-core/src/: docs.rs  erlang.rs  javascript.rs  lib.rs
compiler-core/src/erlang/: tests.rs
compiler-core/src/javascript/: tests.rs
(+2262 files in other folders)
